# suu

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: DEVOPS.md
src/suu/: __init__.py  cli.py
src/suu/core/: __init__.py  clients.py  constants.py  paths.py  plugins.py
src/suu/core/auth/: __init__.py  selenium_session.py
src/suu/forms/: __init__.py  executor.py  loader.py  payload.py  runner.py
src/suu/mcp/: __init__.py  server.py  setup.py
src/suu/scrape/: __init__.py  browser.py  cli.py  scrapers.py  whatson.py
src/suu/scrape/plugins/: clipboard_export.py  csv_export.py  json_export.py  supabase_upload.py  xlsx_export.py
src/suu/worker/: __init__.py  poll.py
tests/: conftest.py  test_executor.py  test_schema.py
