[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suu"
version = "0.1.1"
description = "One friendly toolkit for Students' Union UCL: scrape data and auto-fill forms, with a single `suu` command."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MaybeItsAdam" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ucl", "students-union", "cli", "scraper", "mcp", "forms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

# Core stays dependency-light so a beginner's first install is fast and small.
# The heavy pieces live behind optional extras below.
dependencies = [
    "click",
    "python-dotenv",
    "pydantic>=2",
]

[project.optional-dependencies]
scrape = ["selenium", "beautifulsoup4", "requests", "supabase", "cuid", "openpyxl", "typing_extensions"]
forms = ["playwright", "httpx"]
mcp = ["fastmcp>=0.3.0", "playwright", "httpx"]
all = ["suu[scrape,forms,mcp]"]
dev = ["pytest", "pytest-asyncio", "pytest-playwright"]

[project.urls]
Homepage = "https://github.com/MaybeItsAdam/suu"
Repository = "https://github.com/MaybeItsAdam/suu"
Issues = "https://github.com/MaybeItsAdam/suu/issues"

[project.scripts]
suu = "suu.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["suu*"]

[tool.setuptools.package-data]
"suu.forms" = ["definitions/*.json"]
"suu.mcp" = ["logo.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
